<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Zaruku</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Added Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">Do not have an account? &lt;a href=tesa://signup>Click here&lt;/a> to signup.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="signin_link">Already have an account? &lt;a href=tesa://signin>Click here&lt;/a> to sign in.</string>
    <string name="forget_password_link">&lt;a href=tesa://signup>Forget Password?&lt;/a></string>
    <string name="page_folders">Folders</string>
    <string name="page_produtcts">Products</string>
    <string name="no_products">No Products</string>
    <string name="error_loading_products">Loading products failed</string>
    <string name="title_add_scan">Add Scans</string>
    <string name="add_product">Add Product</string>
    <string name="label_name">Name</string>
    <string name="label_purchase_date">Pruchase Date</string>
    <string name="label_warranty_date">Warranty Date</string>
    <string name="label_price">Price</string>
    <string name="label_description">Description</string>
    <string name="label_submit">Submit</string>
    <string name="message_add_product_successful">Product added</string>
    <string name="message_update_product_successful">Product updated</string>
    <string name="title_update_product">Update</string>
    <string name="title_delete_product">Delete</string>
    <string name="message_add_product_failed">Adding Product failed</string>
    <string name="message_update_product_failed">Updating product failed</string>


</resources>